fix: 群组事件处理逻辑重构以修复错误处理流程 / Refactoring group event handling logic to fix error handling flow